# datasus-fetcher

./: .gitignore  LICENSE  README.md  archive.py  compress.py  datasus-fetcher.py  download-datasus-all.py  fetch-docs.py  fetch.py  list-ftp-files.py  logging.ini  pyproject.toml
datasus_fetcher/: __init__.py  cli.py  constants.py  fetcher.py  meta.py  remote_names.py  slicer.py  storage.py
datasus_raw_fetcher/: fetcher.py  ftp_path.py  meta.py  storage.py  utils.py
scripts/: compress.py  download-datasus-all.py  list-ftp-files.py
tests/: test_datasus_raw_fetcher.py  test_remote_names.py  test_storage.py
