[tool.poetry]
name = "datasus-fetcher"
version = "0.1.1"
description = "Downloader of DATASUS raw data files"
license = "MIT"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
