[tool.poetry]
name = "datasus-fetcher"
version = "0.2.0"
description = "Downloader of DATASUS raw data files"
license = "MIT"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
